# SafeTender-Benchmark

./: Cargo.toml  LICENSE  README.md
server/: Cargo.toml
server/src/: main.rs
wasm/: Cargo.toml
wasm/pkg/: package.json  wasm_interface.d.ts  wasm_interface.js  wasm_interface_bg.wasm  wasm_interface_bg.wasm.d.ts
wasm/secrete_sharing/: Cargo.toml
wasm/secrete_sharing/src/: lib.rs
wasm/secrete_sharing/src/curves/: mod.rs
wasm/secrete_sharing/src/curves/curves_core/: curve_arithmetics.rs  mod.rs
wasm/secrete_sharing/src/encryption/: mod.rs
wasm/secrete_sharing/src/encryption/crypto_core/: crypto_interface.rs  mod.rs
wasm/secrete_sharing/src/encryption/crypto_core/chacha/: chacha_poly1305.rs  mod.rs
wasm/secrete_sharing/src/fields/: mod.rs
wasm/secrete_sharing/src/fields/fields_core/: arithmetic.rs  arithmetic_interface.rs  builders.rs  exponent.rs  hashs.rs  mod.rs  prime_fields.rs
wasm/secrete_sharing/src/shamir/: mod.rs
wasm/secrete_sharing/src/shamir/shamir_core/: core.rs
wasm/src/: lib.rs
web/: encryption.html  reconstruction.html  sharing.html
web/css/: enc.css  styles.css
web/pkg/: interface.wasm  interface.wasm.br  wasm_interface.d.ts  wasm_interface.js  wasm_interface_bg.wasm  wasm_interface_bg.wasm.d.ts
web/scripts/: bench.js  core.js  files.js  scripts.js
