[package]
name = "wasm_interface"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
secrete_sharing = { path = "./secrete_sharing" }
wasm-bindgen = { version = "0.2", features = ["serde"] }
wasm-bindgen-futures = "0.4.50"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.138"
web-sys ={version = "0.3.77",features =["console"]}
serde-wasm-bindgen = "0.6.5"
hkdf = "0.13.0"
uuid = { version = "1.0", features = ["v4", "js"] }