[package]
name = "secrete_sharing"
version = "0.1.0"
edition = "2021"

[dependencies]
num-traits = "^0.2.17"
num-bigint = "^0.4.4"
sha2 = "0.10.8"
base64 = "0.22.1"
once_cell = "1.19.0"
rand = { version = "0.8", default-features = false, features = ["std"] }
getrandom = { version = "0.2", features = ["js"] }
argon2 = { version = "0.5", default-features = false, features = ["alloc"] }
hmac ="0.12.1"
aes = "0.8"
ctr = "0.9"
hex = "0.4"
hkdf="0.12.4"
aes-gcm = "0.10" # or latest
web-sys = { version = "0.3", features = ["Window", "Performance"] }
js-sys = "0.3"